# NeuralCore

./: CMakeLists.txt  README.md  create_dirs.py
code/: README.md
code/examples/: xor.cpp
code/include/neuralcore/: autograd.h  serialization.h  tensor.h
code/include/neuralcore/data/: dataloader.h
code/include/neuralcore/nn/: activation.h  linear.h  sequential.h
code/include/neuralcore/optim/: adam.h
code/src/: autograd.cpp  ops.cpp
code/src/data/: dataset.cpp
code/src/nn/: activation.cpp  loss.cpp  module.cpp
code/src/optim/: adam.cpp
code/tests/: test_optim.cpp  test_tensor.cpp
include/neuralcore/: ops.h
include/neuralcore/data/: dataset.h
include/neuralcore/nn/: dropout.h  loss.h  module.h
include/neuralcore/optim/: optimizer.h  rmsprop.h  sgd.h
src/: serialization.cpp  tensor.cpp
src/data/: dataloader.cpp
src/nn/: dropout.cpp  linear.cpp  sequential.cpp
src/optim/: rmsprop.cpp  sgd.cpp
tests/: test_autograd.cpp  test_nn.cpp
webpage/: index.html  package-lock.json  package.json
webpage/src/: App.css  App.tsx  index.css  main.tsx
webpage/src/content/: docs.ts
webpage/src/content/markdown/: api-autograd.md  api-nn.md  api-optim.md  api-tensor.md  autograd-deep-dive.md  getting-started.md  tensor-fundamentals.md  training-at-scale.md  tutorial-binary-classification.md  tutorial-custom-loss.md  tutorial-optimizer-benchmarking.md
webpage/src/routes/: ApiPage.tsx  DocsPage.tsx  HomePage.tsx  TutorialsPage.tsx
